--- a/css/agency.css
+++ b/css/agency.css
@@ -131,11 +131,8 @@ img::-moz-selection {
   content: '';
   background: url("../Logo3.png") no-repeat;
   background-size: contain;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -149,6 +146,13 @@ img::-moz-selection {
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
   color: #fed136;
+}
+
+#mainNav > .container,
+#mainNav > .container-fluid {
+  -webkit-box-align: normal;
+  -ms-flex-align: normal;
+  align-items: normal;
 }
 
 @media (min-width: 992px) {
