--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -29,11 +29,8 @@
       content: '';
       background: url('../Logo3.png') no-repeat;
       background-size: contain;
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
+      width: 100%;
+      height: 100%;
     }
   }
   .navbar-nav {
@@ -51,6 +48,10 @@
         }
       }
     }
+  }
+  > .container,
+  > .container-fluid {
+    align-items: normal;
   }
 }
 @media(min-width:992px) {
