--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -96,3 +96,11 @@ img::selection {
 img::-moz-selection {
   background: transparent;
 }
+
+//Seperating Line
+#uline{
+  
+  border-bottom: 1px solid grey;
+  width:7.77%;
+  margin:auto;
+}
