Rewrite heading underline

--- a/css/agency.css
+++ b/css/agency.css
@@ -45,6 +45,14 @@ section h2.section-heading {
   margin-bottom: 15px;
 }
 
+section h2.section-heading.heading-underline::after {
+  content: ' ';
+  display: block;
+  width: 7.77%;
+  border-bottom: 1px solid grey;
+  margin: 1rem auto 1.5rem;
+}
+
 section h3.section-subheading {
   font-size: 16px;
   font-weight: 400;
