--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,5 +1,5 @@
 // Styling for the portfolio section
-#portfolio {
+#product {
   .portfolio-item {
     right: 0;
     margin: 0 0 15px;
@@ -43,7 +43,7 @@
     .portfolio-caption {
       max-width: 400px;
       margin: 0 auto;
-      padding: 25px;
+      padding: 5px;
       text-align: center;
       background-color: $white;
       h4 {
