--- a/css/agency.css
+++ b/css/agency.css
@@ -242,9 +242,11 @@ header.masthead .intro-text .intro-heading {
   }
   header.masthead .intro-text .intro-heading {
     font-size: 75px;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 75px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+    text-align: left;
+    margin-left: -200px;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
 }
