--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -40,9 +40,11 @@ header.masthead {
       }
       .intro-heading {
         font-size: 75px;
-        font-weight: 700;
+        font-weight: 600;
         line-height: 75px;
-        margin-bottom: 50px;
+        margin-bottom: 40px;
+		text-align: left;
+		margin-left: -200px;
         @include heading-font;
       }
     }
