--- a/css/agency.css
+++ b/css/agency.css
@@ -199,7 +199,7 @@ img::-moz-selection {
 
 header.masthead {
   text-align: center;
-  color: white;
+  color: black;
   background-image: url("../img/landing.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -244,7 +244,7 @@ header.masthead .intro-text .intro-heading {
     font-size: 75px;
     font-weight: 600;
     line-height: 75px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-align: left;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
