--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,7 +1,7 @@
 // Styling for the masthead
 header.masthead {
   text-align: center;
-  color: white;
+  color: black;
   background-image: url('../img/landing.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -42,7 +42,7 @@ header.masthead {
         font-size: 75px;
         font-weight: 600;
         line-height: 75px;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
 		text-align: left;
 		
         @include heading-font;
