added new css file for portfolio header

--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -8,6 +8,7 @@
 @import "masthead.scss";
 @import "services.scss";
 @import "portfolio.scss";
+@import "porthead.scss";
 @import "timeline.scss";
 @import "team.scss";
 @import "contact.scss";
