--- a/css/agency.css
+++ b/css/agency.css
@@ -418,6 +418,42 @@ header.masthead .intro-text .intro-subheading > span {
   background-color: #212529;
 }
 
+header.porthead1 {
+  text-align: center;
+  color: black;
+  background-image: url("../img/header/h1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+@media (min-width: 768px) {
+  header.porthead1 {
+    text-align: left;
+  }
+  header.porthead1 .intro-text {
+    padding-top: 150px;
+    padding-bottom: 100px;
+  }
+  header.porthead1 .intro-text .intro-lead-in {
+    font-size: 40px;
+    font-style: italic;
+    line-height: 40px;
+    margin-bottom: 25px;
+    font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+  header.porthead1 .intro-text .intro-heading {
+    font-size: 75px;
+    font-weight: 600;
+    line-height: 75px;
+    margin-bottom: 20px;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+}
+
 .timeline {
   position: relative;
   padding: 0;
