Added remaining product page & supporting elements

--- a/scss/_porthead.scss
+++ b/scss/_porthead.scss
@@ -1,5 +1,5 @@
 // Styling for the porthead
-header.porthead1 {
+header.graphhead {
   text-align: center;
   color: black;
   background-image: url('../img/header/h1.jpg');
@@ -11,6 +11,99 @@ header.porthead1 {
   padding-bottom: 100px;
   
 }
+
+header.texthead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/h1.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  
+}
+
+header.plashead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/h1.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  
+}
+
+header.ttrchead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/h1.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  
+}
+
+header.cardhead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/h1.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  
+}
+
+header.branhead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/h1.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  
+}
+
+header.digmhead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/h1.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  
+}
+
+header.hdiehead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/h1.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  
+}
+
+
 @media(min-width:768px) {
   header.porthead1 {
     text-align: left;
