--- a/css/agency.css
+++ b/css/agency.css
@@ -418,7 +418,91 @@ header.masthead .intro-text .intro-subheading > span {
   background-color: #212529;
 }
 
-header.porthead1 {
+header.graphhead {
+  text-align: center;
+  color: black;
+  background-image: url("../img/header/h1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+header.texthead {
+  text-align: center;
+  color: black;
+  background-image: url("../img/header/h1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+header.plashead {
+  text-align: center;
+  color: black;
+  background-image: url("../img/header/h1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+header.ttrchead {
+  text-align: center;
+  color: black;
+  background-image: url("../img/header/h1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+header.cardhead {
+  text-align: center;
+  color: black;
+  background-image: url("../img/header/h1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+header.branhead {
+  text-align: center;
+  color: black;
+  background-image: url("../img/header/h1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+header.digmhead {
+  text-align: center;
+  color: black;
+  background-image: url("../img/header/h1.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+header.hdiehead {
   text-align: center;
   color: black;
   background-image: url("../img/header/h1.jpg");
