--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -46,6 +46,13 @@
         &:hover {
           color: $primary;
         }
+        &.dropdown-item {
+          padding: .25rem 1.5rem;
+        }
+      }
+      &.dropdown > .dropdown-menu {
+        background-color: inherit;
+        border: none;
       }
     }
   }
@@ -71,6 +78,18 @@
     }
     .navbar-nav {
       .nav-item {
+        > .dropdown-menu.show {
+          display: none;
+        }
+        &:hover > .dropdown-menu {
+          display: block;
+          margin: 0;
+          background-color: #fff;
+          border: 1px solid rgba(0,0,0,.15);
+          .nav-link {
+            color: #212529;
+          }
+        }
         .nav-link {
           padding: 1.1em 1em !important;
         }
