--- a/scss/_porthead.scss
+++ b/scss/_porthead.scss
@@ -12,10 +12,10 @@ header.graphhead {
   
 }
 
-header.texthead {
+header.plashead {
   text-align: center;
   color: black;
-  background-image: url('../img/header/h1.jpg');
+  background-image: url('../img/header/h2.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -25,23 +25,23 @@ header.texthead {
   
 }
 
-header.plashead {
+header.texthead {
   text-align: center;
   color: black;
-  background-image: url('../img/header/h1.jpg');
+  background-image: url('../img/header/h3.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  padding-top: 150px;
-  padding-bottom: 100px;
+  padding-top: 300px;
+  padding-bottom: 200px;
   
 }
 
 header.ttrchead {
   text-align: center;
   color: black;
-  background-image: url('../img/header/h1.jpg');
+  background-image: url('../img/header/h4.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -54,7 +54,7 @@ header.ttrchead {
 header.cardhead {
   text-align: center;
   color: black;
-  background-image: url('../img/header/h1.jpg');
+  background-image: url('../img/header/h5.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -67,7 +67,7 @@ header.cardhead {
 header.branhead {
   text-align: center;
   color: black;
-  background-image: url('../img/header/h1.jpg');
+  background-image: url('../img/header/h6.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -80,7 +80,20 @@ header.branhead {
 header.digmhead {
   text-align: center;
   color: black;
-  background-image: url('../img/header/h1.jpg');
+  background-image: url('../img/header/h7.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  
+}
+
+header.hsechead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/h8.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -93,7 +106,7 @@ header.digmhead {
 header.hdiehead {
   text-align: center;
   color: black;
-  background-image: url('../img/header/h1.jpg');
+  background-image: url('../img/header/h9.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
