--- a/css/agency.css
+++ b/css/agency.css
@@ -471,14 +471,14 @@ header.texthead {
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  padding-top: 300px;
+  padding-top: 250px;
   padding-bottom: 200px;
 }
 
 header.ttrchead {
   text-align: center;
   color: black;
-  background-image: url("../img/header/h4.jpg");
+  background-image: url("../img/landing.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -495,7 +495,7 @@ header.cardhead {
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  padding-top: 150px;
+  padding-top: 250px;
   padding-bottom: 100px;
 }
 
