--- a/scss/_porthead.scss
+++ b/scss/_porthead.scss
@@ -33,7 +33,7 @@ header.texthead {
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  padding-top: 300px;
+  padding-top: 250px;
   padding-bottom: 200px;
   
 }
@@ -41,7 +41,7 @@ header.texthead {
 header.ttrchead {
   text-align: center;
   color: black;
-  background-image: url('../img/header/h4.jpg');
+  background-image: url('../img/landing.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -59,7 +59,7 @@ header.cardhead {
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  padding-top: 150px;
+  padding-top: 250px;
   padding-bottom: 100px;
   
 }
