Added cosmetic page & content

--- a/scss/_porthead.scss
+++ b/scss/_porthead.scss
@@ -38,6 +38,19 @@ header.texthead {
   
 }
 
+header.cosmhead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/h4.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 250px;
+  padding-bottom: 150px;
+  
+}
+
 header.ttrchead {
   text-align: center;
   color: black;
