Changed header photo of HS Dies

--- a/scss/_porthead.scss
+++ b/scss/_porthead.scss
@@ -119,7 +119,7 @@ header.hsechead {
 header.hdiehead {
   text-align: center;
   color: black;
-  background-image: url('../img/header/h9.jpg');
+  background-image: url('../img/landing.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
