--- a/css/agency.css
+++ b/css/agency.css
@@ -350,6 +350,10 @@ header.masthead .intro-text .intro-subheading > span {
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+#product .portfolio-item.no-padding {
+  padding: 0;
+}
+
 #product * {
   z-index: 2;
 }
