--- a/scss/_porthead.scss
+++ b/scss/_porthead.scss
@@ -1,5 +1,5 @@
 // Styling for the porthead
-header.graphhead {
+header.hfhead {
   text-align: center;
   color: black;
   background-image: url('../img/header/h1.jpg');
@@ -7,10 +7,25 @@ header.graphhead {
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  padding-top: 200px;
+  padding-top: 300px;
   padding-bottom: 150px;
   
 }
+
+header.cfhead {
+  text-align: center;
+  color: black;
+  background-image: url('../img/header/hcft.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  padding-top: 300px;
+  padding-bottom: 150px;
+  
+}
+
+
 
 header.plashead {
   text-align: center;
@@ -54,13 +69,13 @@ header.cosmhead {
 header.ttrchead {
   text-align: center;
   color: black;
-  background-image: url('../img/landing.jpg');
+  background-image: url('../img/header/h1.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  padding-top: 150px;
-  padding-bottom: 100px;
+  padding-top: 300px;
+  padding-bottom: 150px;
   
 }
 
@@ -73,7 +88,7 @@ header.cardhead {
   background-position: center center;
   background-size: cover;
   padding-top: 250px;
-  padding-bottom: 100px;
+  padding-bottom: 150px;
   
 }
 
@@ -86,7 +101,7 @@ header.branhead {
   background-position: center center;
   background-size: cover;
   padding-top: 250px;
-  padding-bottom: 100px;
+  padding-bottom: 150px;
   
 }
 
@@ -119,13 +134,13 @@ header.hsechead {
 header.hdiehead {
   text-align: center;
   color: black;
-  background-image: url('../img/landing.jpg');
+  background-image: url('../img/header/h1.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-  padding-top: 150px;
-  padding-bottom: 100px;
+  padding-top: 300px;
+  padding-bottom: 150px;
   
 }
 
